# spaceinvaders-3d

./: CMakeLists.txt  conanfile.txt
assets/: sample_model.mtl
assets/cube/: cube.blend  cube.blend1  cube.mtl  sphere.blend@  sphere.mtl  untitled.blend  untitled.blend1
assets/models/: bullet.blend  bullet.blend1  bullet.mtl  playership.blend  playership.mtl  spaceinvader.blend  spaceinvader.blend1  spaceinvader.mtl  spaceinvader2.blend  spaceinvader2.blend1  spaceinvader2.mtl  wall.blend  wall.blend1  wall.mtl
src/: Background.cpp  Background.h  Mesh.cpp  Mesh.h  PlayerShip.cpp  PlayerShip.h  SolidWall.cpp  SolidWall.h  TextHandler.cpp  TextHandler.h  alien.cpp  alien.h  barrier.cpp  barrier.h  bullet.cpp  bullet.h  camera.cpp  camera.h  gamestate.cpp  gamestate.h  main.cpp  model.cpp  model.h  shotHandler.cpp  shotHandler.h
